--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -1,6 +1,6 @@
 # ALL < DEBUG < INFO < WARN < ERROR < FATAL < OFF
 
-log4j.rootLogger=debug, stdout
+log4j.rootLogger=info, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
