--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -1,7 +1,25 @@
 # ALL < DEBUG < INFO < WARN < ERROR < FATAL < OFF
 
 log4j.rootLogger=info, stdout
+log4j.rootLogger=ALL, FICHERO
+
+# Log in console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%t %-5p %c{2} - %m%n 
+log4j.appender.stdout.layout.ConversionPattern=%t %-5p %c{2} - %m%n
+
+# Log in file
+log4j.appender.FICHERO=org.apache.log4j.RollingFileAppender
+log4j.appender.FICHERO.File=ubugrades-log.log
+# Set the append to false, should not overwrite
+log4j.appender.FILE.Append=false
+# max.size per file before change
+log4j.appender.FICHERO.MaxFileSize=25MB
+# number of files for rolling 
+log4j.appender.FICHERO.MaxBackupIndex=4
+log4j.appender.FICHERO.layout=org.apache.log4j.PatternLayout
+log4j.appender.FICHERO.layout.ConversionPattern=%d{MM-dd@HH:mm:ss} %-5p (%13F:%L) %3x - %m%n
+
+# disable this package from log (hide login and password)
+log4j.logger.org.apache.http=OFF
