--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -1,19 +1,20 @@
 # ALL < DEBUG < INFO < WARN < ERROR < FATAL < OFF
 
-log4j.rootLogger=info, stdout
-log4j.rootLogger=ALL, FICHERO
+log4j.rootLogger=ALL, stdout
+#log4j.rootLogger=OFF, FICHERO
 
 # Log in console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%t %-5p %c{2} - %m%n
+#log4j.appender.stdout.layout.ConversionPattern=%t %-5p %c{2} - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{MM-dd@HH:mm:ss} %-5p (%13F:%L) %3x - %m%n
 
 # Log in file
 log4j.appender.FICHERO=org.apache.log4j.RollingFileAppender
-log4j.appender.FICHERO.File=ubugrades-log.log
+log4j.appender.FICHERO.File=ubugrades-log-1.5.3.log
 # Set the append to false, should not overwrite
-log4j.appender.FILE.Append=false
+log4j.appender.FILE.Append=true
 # max.size per file before change
 log4j.appender.FICHERO.MaxFileSize=25MB
 # number of files for rolling 
@@ -21,5 +22,13 @@ log4j.appender.FICHERO.MaxBackupIndex=4
 log4j.appender.FICHERO.layout=org.apache.log4j.PatternLayout
 log4j.appender.FICHERO.layout.ConversionPattern=%d{MM-dd@HH:mm:ss} %-5p (%13F:%L) %3x - %m%n
 
+
 # disable this package from log (hide login and password)
 log4j.logger.org.apache.http=OFF
+log4j.logger.org.apache.http.impl.conn=OFF
+
+#log4j.logger.org.apache.http.impl.conn.DefaultHttpClientConnectionOperator=OFF
+#log4j.logger.org.apache.http.impl.conn.LoggingManagedHttpClientConnection=OFF
+#log4j.logger.org.apache.http.impl.conn.Wire=OFF
+
+log4j.logger.org.apache.http.impl.execchain.MainClientExec=OFF
