--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -1,7 +1,8 @@
 # ALL < DEBUG < INFO < WARN < ERROR < FATAL < OFF
 
-log4j.rootLogger=ALL, stdout
-#log4j.rootLogger=OFF, FICHERO
+log4j.rootLogger=ALL, FICHERO
+#log4j.rootLogger=ALL, stdout, FICHERO
+#log4j.rootLogger=ALL, FICHERO
 
 # Log in console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -14,11 +15,11 @@ log4j.appender.stdout.layout.ConversionPattern=%d{MM-dd@HH:mm:ss} %-5p (%13F:%L)
 log4j.appender.FICHERO=org.apache.log4j.RollingFileAppender
 log4j.appender.FICHERO.File=ubugrades-log-1.5.3.log
 # Set the append to false, should not overwrite
-log4j.appender.FILE.Append=true
+log4j.appender.FILE.Append=false
 # max.size per file before change
-log4j.appender.FICHERO.MaxFileSize=25MB
+log4j.appender.FICHERO.MaxFileSize=5MB
 # number of files for rolling 
-log4j.appender.FICHERO.MaxBackupIndex=4
+log4j.appender.FICHERO.MaxBackupIndex=2
 log4j.appender.FICHERO.layout=org.apache.log4j.PatternLayout
 log4j.appender.FICHERO.layout.ConversionPattern=%d{MM-dd@HH:mm:ss} %-5p (%13F:%L) %3x - %m%n
 
