--- a/.classpath
+++ b/.classpath
@@ -18,6 +18,7 @@
 	<classpathentry kind="lib" path="lib/httpasyncclient-4.1.2.jar"/>
 	<classpathentry kind="lib" path="lib/httpasyncclient-cache-4.1.2.jar"/>
 	<classpathentry kind="lib" path="lib/jsoup-1.11.3.jar"/>
+	<classpathentry kind="lib" path="lib/commons-csv-1.6.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
