--- a/.classpath
+++ b/.classpath
@@ -3,23 +3,23 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="src" path="resources"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/httpclient-cache-4.5.2.jar"/>
-	<classpathentry kind="lib" path="lib/httpcore-nio-4.4.5.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-api-1.7.1.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.7.1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-math3-3.6.1.jar"/>
-	<classpathentry kind="lib" path="lib/java-json.jar"/>
-	<classpathentry kind="lib" path="lib/httpclient-4.5.2.jar"/>
-	<classpathentry kind="lib" path="lib/httpcore-4.4.5.jar"/>
-	<classpathentry kind="lib" path="lib/commons-codec-1.9.jar"/>
-	<classpathentry kind="lib" path="lib/gson-2.8.0.jar"/>
-	<classpathentry kind="lib" path="lib/httpasyncclient-4.1.2.jar"/>
-	<classpathentry kind="lib" path="lib/httpasyncclient-cache-4.1.2.jar"/>
-	<classpathentry kind="lib" path="lib/jsoup-1.11.3.jar"/>
-	<classpathentry kind="lib" path="lib/commons-csv-1.6.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="libs/commons-codec-1.9.jar"/>
+	<classpathentry kind="lib" path="libs/commons-csv-1.6.jar"/>
+	<classpathentry kind="lib" path="libs/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="libs/commons-math3-3.6.1.jar"/>
+	<classpathentry kind="lib" path="libs/gson-2.8.0.jar"/>
+	<classpathentry kind="lib" path="libs/httpasyncclient-4.1.2.jar"/>
+	<classpathentry kind="lib" path="libs/httpasyncclient-cache-4.1.2.jar"/>
+	<classpathentry kind="lib" path="libs/httpclient-4.5.2.jar"/>
+	<classpathentry kind="lib" path="libs/httpclient-cache-4.5.2.jar"/>
+	<classpathentry kind="lib" path="libs/httpcore-4.4.5.jar"/>
+	<classpathentry kind="lib" path="libs/httpcore-nio-4.4.5.jar"/>
+	<classpathentry kind="lib" path="libs/java-json.jar"/>
+	<classpathentry kind="lib" path="libs/jsoup-1.11.3.jar"/>
+	<classpathentry kind="lib" path="libs/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="libs/slf4j-api-1.7.1.jar"/>
+	<classpathentry kind="lib" path="libs/slf4j-log4j12-1.7.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
