--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,11 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="libs/commons-codec-1.9.jar"/>
-	<classpathentry kind="lib" path="libs/commons-csv-1.6.jar"/>
+	<classpathentry kind="lib" path="libs/commons-csv-1.6.jar" sourcepath="libs/src/commons-csv-1.6-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="https://commons.apache.org/proper/commons-csv/apidocs/index.html"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="libs/commons-logging-1.2.jar"/>
 	<classpathentry kind="lib" path="libs/commons-math3-3.6.1.jar"/>
 	<classpathentry kind="lib" path="libs/gson-2.8.0.jar"/>
@@ -16,10 +20,18 @@
 	<classpathentry kind="lib" path="libs/httpclient-cache-4.5.2.jar"/>
 	<classpathentry kind="lib" path="libs/httpcore-4.4.5.jar"/>
 	<classpathentry kind="lib" path="libs/httpcore-nio-4.4.5.jar"/>
-	<classpathentry kind="lib" path="libs/java-json.jar"/>
-	<classpathentry kind="lib" path="libs/jsoup-1.11.3.jar"/>
+	<classpathentry kind="lib" path="libs/jsoup-1.11.3.jar" sourcepath="libs/src/jsoup-1.11.3-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/UBUGrades/libs/docs/jsoup-1.11.3-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="libs/log4j-1.2.17.jar"/>
 	<classpathentry kind="lib" path="libs/slf4j-api-1.7.1.jar"/>
 	<classpathentry kind="lib" path="libs/slf4j-log4j12-1.7.1.jar"/>
+	<classpathentry kind="lib" path="libs/json-20180813.jar" sourcepath="libs/src/json-20180813-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/UBUGrades/libs/docs/json-20180813-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
