--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="src" path="resources"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="libs/commons-codec-1.9.jar"/>
@@ -42,6 +42,21 @@
 	<classpathentry kind="lib" path="libs/log4j-1.2.17.jar" sourcepath="libs/src/log4j-1.2.17-sources.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:platform:/resource/UBUGrades/libs/docs/log4j-1.2.17-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="libs/testfx-core-4.0.15-alpha.jar" sourcepath="libs/src/testfx-core-4.0.15-alpha-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/libs/docs/testfx-core-4.0.15-alpha-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="libs/hamcrest-all-1.3.jar" sourcepath="libs/src/hamcrest-all-1.3-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/libs/docs/hamcrest-all-1.3-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="libs/testfx-junit5-4.0.15-alpha.jar" sourcepath="libs/src/testfx-junit5-4.0.15-alpha-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/libs/testfx-junit5-4.0.15-alpha.jar!/"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
