--- a/.classpath
+++ b/.classpath
@@ -59,5 +59,10 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/libs/testfx-junit5-4.0.15-alpha.jar!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="libs/threeten-extra-1.5.0.jar" sourcepath="libs/src/threeten-extra-1.5.0-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/libs/docs/threeten-extra-1.5.0-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
