Arreglado con la cache cuando se cambia la contraseña y otras mejoras en chart #30

--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -1,7 +1,7 @@
 # ALL < DEBUG < INFO < WARN < ERROR < FATAL < OFF
 
-log4j.rootLogger=ALL, FICHERO
-#log4j.rootLogger=ALL, stdout, FICHERO
+#log4j.rootLogger=ALL, FICHERO
+log4j.rootLogger=ALL, stdout, FICHERO
 #log4j.rootLogger=ALL, FICHERO
 
 # Log in console
