--- a/.classpath
+++ b/.classpath
@@ -64,5 +64,10 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/libs/docs/threeten-extra-1.5.0-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="libs/gson-2.8.5.jar" sourcepath="libs/src/gson-2.8.5-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/libs/docs/gson-2.8.5-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
