--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -1,7 +1,7 @@
 # ALL < DEBUG < INFO < WARN < ERROR < FATAL < OFF
 
-#log4j.rootLogger=ALL, FICHERO
-log4j.rootLogger=ALL, stdout, FICHERO
+log4j.rootLogger=ALL, FICHERO
+#log4j.rootLogger=ALL, stdout, FICHERO
 #log4j.rootLogger=ALL, FICHERO
 
 # Log in console
@@ -13,7 +13,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{MM-dd@HH:mm:ss} %-5p (%13F:%L)
 
 # Log in file
 log4j.appender.FICHERO=org.apache.log4j.RollingFileAppender
-log4j.appender.FICHERO.File=./log/ubumonitor-log-2.1.0.log
+log4j.appender.FICHERO.File=./log/ubumonitor-log-2.2.0.log
 # Set the append to false, should not overwrite
 log4j.appender.FILE.Append=false
 # max.size per file before change
