--- a/.classpath
+++ b/.classpath
@@ -5,33 +5,15 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="libs/commons-codec-1.9.jar"/>
 	<classpathentry kind="lib" path="libs/commons-csv-1.6.jar" sourcepath="libs/src/commons-csv-1.6-sources.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="https://commons.apache.org/proper/commons-csv/apidocs/index.html"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="libs/commons-logging-1.2.jar"/>
 	<classpathentry kind="lib" path="libs/commons-math3-3.6.1.jar"/>
-	<classpathentry kind="lib" path="libs/httpasyncclient-4.1.2.jar"/>
-	<classpathentry kind="lib" path="libs/httpasyncclient-cache-4.1.2.jar"/>
-	<classpathentry kind="lib" path="libs/httpclient-4.5.2.jar"/>
-	<classpathentry kind="lib" path="libs/httpclient-cache-4.5.2.jar"/>
-	<classpathentry kind="lib" path="libs/httpcore-4.4.5.jar"/>
-	<classpathentry kind="lib" path="libs/httpcore-nio-4.4.5.jar"/>
-	<classpathentry kind="lib" path="libs/jsoup-1.11.3.jar" sourcepath="libs/src/jsoup-1.11.3-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/UBUGrades/libs/docs/jsoup-1.11.3-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="libs/json-20180813.jar" sourcepath="libs/src/json-20180813-sources.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:platform:/resource/UBUGrades/libs/docs/json-20180813-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="libs/slf4j-api-1.7.26.jar" sourcepath="libs/src/slf4j-api-1.7.26-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="https://www.slf4j.org/api/"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="libs/slf4j-log4j12-1.7.26.jar" sourcepath="libs/src/slf4j-log4j12-1.7.26-sources.jar">
@@ -44,21 +26,6 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/UBUGrades/libs/docs/log4j-1.2.17-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="libs/testfx-core-4.0.15-alpha.jar" sourcepath="libs/src/testfx-core-4.0.15-alpha-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/libs/docs/testfx-core-4.0.15-alpha-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="libs/hamcrest-all-1.3.jar" sourcepath="libs/src/hamcrest-all-1.3-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/libs/docs/hamcrest-all-1.3-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="libs/testfx-junit5-4.0.15-alpha.jar" sourcepath="libs/src/testfx-junit5-4.0.15-alpha-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/libs/testfx-junit5-4.0.15-alpha.jar!/"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="libs/threeten-extra-1.5.0.jar" sourcepath="libs/src/threeten-extra-1.5.0-sources.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/libs/docs/threeten-extra-1.5.0-javadoc.jar!/"/>
@@ -69,5 +36,7 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/libs/docs/gson-2.8.5-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="libs/jsoup-1.11.3.jar"/>
+	<classpathentry kind="lib" path="libs/slf4j-api-1.7.26.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
