--- a/.classpath
+++ b/.classpath
@@ -10,7 +10,11 @@
 			<attribute name="javadoc_location" value="https://commons.apache.org/proper/commons-csv/apidocs/index.html"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="libs/commons-math3-3.6.1.jar"/>
+	<classpathentry kind="lib" path="libs/commons-math3-3.6.1.jar" sourcepath="libs/commons-math3-3.6.1.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="https://commons.apache.org/proper/commons-math/javadocs/api-3.6.1/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="libs/json-20180813.jar" sourcepath="libs/src/json-20180813-sources.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:platform:/resource/UBUGrades/libs/docs/json-20180813-javadoc.jar!/"/>
@@ -23,7 +27,7 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="libs/log4j-1.2.17.jar" sourcepath="libs/src/log4j-1.2.17-sources.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/UBUGrades/libs/docs/log4j-1.2.17-javadoc.jar!/"/>
+			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/libs/docs/log4j-1.2.17-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="libs/threeten-extra-1.5.0.jar" sourcepath="libs/src/threeten-extra-1.5.0-sources.jar">
@@ -36,7 +40,15 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/libs/docs/gson-2.8.5-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="libs/jsoup-1.11.3.jar"/>
-	<classpathentry kind="lib" path="libs/slf4j-api-1.7.26.jar"/>
+	<classpathentry kind="lib" path="libs/jsoup-1.11.3.jar" sourcepath="libs/jsoup-1.11.3.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/libs/docs/jsoup-1.11.3-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="libs/slf4j-api-1.7.26.jar" sourcepath="libs/slf4j-api-1.7.26.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/libs/docs/slf4j-api-1.7.26-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
