--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -13,9 +13,9 @@ log4j.appender.stdout.layout.ConversionPattern=%d{MM-dd@HH:mm:ss} %-5p (%13F:%L)
 
 # Log in file
 log4j.appender.FICHERO=org.apache.log4j.RollingFileAppender
-log4j.appender.FICHERO.File=./log/ubumonitor-log-2.3.5.2-alpha.log
+log4j.appender.FICHERO.File=${logfile.name}
 # Set the append to false, should not overwrite
-log4j.appender.FILE.Append=false
+log4j.appender.FICHERO.Append=true
 # max.size per file before change
 log4j.appender.FICHERO.MaxFileSize=50MB
 # number of files for rolling 
