--- a/.classpath
+++ b/.classpath
@@ -5,49 +5,49 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="libs/commons-csv-1.6.jar" sourcepath="libs/src/commons-csv-1.6-sources.jar">
+	<classpathentry kind="lib" path="lib/commons-csv-1.6.jar" sourcepath="lib/src/commons-csv-1.6-sources.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="https://commons.apache.org/proper/commons-csv/apidocs/index.html"/>
+			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/lib/docs/commons-csv-1.6-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="libs/commons-math3-3.6.1.jar" sourcepath="libs/src/commons-math3-3.6.1-sources.jar">
+	<classpathentry kind="lib" path="lib/commons-math3-3.6.1.jar" sourcepath="lib/src/commons-math3-3.6.1-sources.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="https://commons.apache.org/proper/commons-math/javadocs/api-3.6.1/"/>
+			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/lib/docs/commons-math3-3.6.1-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="libs/json-20180813.jar" sourcepath="libs/src/json-20180813-sources.jar">
+	<classpathentry kind="lib" path="lib/gson-2.8.5.jar" sourcepath="lib/src/gson-2.8.5-sources.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/UBUGrades/libs/docs/json-20180813-javadoc.jar!/"/>
+			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/lib/docs/gson-2.8.5-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="libs/slf4j-log4j12-1.7.26.jar" sourcepath="libs/src/slf4j-log4j12-1.7.26-sources.jar">
+	<classpathentry kind="lib" path="lib/json-20180813.jar" sourcepath="lib/src/json-20180813-sources.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="https://www.slf4j.org/api/"/>
+			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/lib/docs/json-20180813-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="libs/log4j-1.2.17.jar" sourcepath="libs/src/log4j-1.2.17-sources.jar">
+	<classpathentry kind="lib" path="lib/jsoup-1.11.3.jar" sourcepath="lib/src/jsoup-1.11.3-sources.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/libs/docs/log4j-1.2.17-javadoc.jar!/"/>
+			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/lib/docs/jsoup-1.11.3-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="libs/threeten-extra-1.5.0.jar" sourcepath="libs/src/threeten-extra-1.5.0-sources.jar">
+	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar" sourcepath="lib/src/log4j-1.2.17-sources.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/libs/docs/threeten-extra-1.5.0-javadoc.jar!/"/>
+			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/lib/docs/log4j-1.2.17-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="libs/gson-2.8.5.jar" sourcepath="libs/src/gson-2.8.5-sources.jar">
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.26.jar" sourcepath="lib/src/slf4j-api-1.7.26-sources.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/libs/docs/gson-2.8.5-javadoc.jar!/"/>
+			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/lib/docs/slf4j-api-1.7.26-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="libs/jsoup-1.11.3.jar" sourcepath="libs/src/jsoup-1.11.3-sources.jar">
+	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.7.26.jar" sourcepath="lib/slf4j-log4j12-1.7.26.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/libs/docs/jsoup-1.11.3-javadoc.jar!/"/>
+			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/lib/docs/slf4j-log4j12-1.7.26-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="libs/slf4j-api-1.7.26.jar" sourcepath="libs/slf4j-api-1.7.26.jar">
+	<classpathentry kind="lib" path="lib/threeten-extra-1.5.0.jar" sourcepath="lib/src/threeten-extra-1.5.0-sources.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/libs/docs/slf4j-api-1.7.26-javadoc.jar!/"/>
+			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/lib/docs/threeten-extra-1.5.0-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
