--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -2,7 +2,7 @@
 
 #log4j.rootLogger=ALL, FICHERO
 log4j.rootLogger=ALL, stdout, FICHERO
-#log4j.rootLogger=ALL, FICHERO
+#log4j.rootLogger=WARN, FICHERO
 
 # Log in console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
