Update to v2.5.0-stable

--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -1,8 +1,8 @@
 # ALL < DEBUG < INFO < WARN < ERROR < FATAL < OFF
 
 #log4j.rootLogger=ALL, FICHERO
-log4j.rootLogger=ALL, stdout, FICHERO
-#log4j.rootLogger=WARN, FICHERO
+#log4j.rootLogger=ALL, stdout, FICHERO
+log4j.rootLogger=WARN, FICHERO
 
 # Log in console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
