--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>es.ubu.lsi</groupId>
 	<artifactId>ubumonitor</artifactId>
-	<version>2.6.1-stable</version>
+	<version>2.6.2-stable</version>
 
 
 	<name>UBUMonitor</name>
@@ -207,7 +207,7 @@
 						</manifest>
 					</archive>
 
-					<finalName>${project.name}-${project.version}</finalName>
+					<finalName>${project.name}.v${project.version}</finalName>
 
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
