--- a/.classpath
+++ b/.classpath
@@ -53,6 +53,7 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/UBUMonitor/lib/docs/controlsfx-8.40.16-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/tsne-2.5.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
