--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -13,7 +13,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{MM-dd@HH:mm:ss} %-5p (%13F:%L)
 
 # Log in file
 log4j.appender.FICHERO=org.apache.log4j.RollingFileAppender
-log4j.appender.FICHERO.File=Test_${logfile.name}
+log4j.appender.FICHERO.File=${logfile.name}
 # Set the append to false, should not overwrite
 log4j.appender.FICHERO.Append=true
 # max.size per file before change
