--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
 			<groupId>com.github.lejon</groupId>
 			<artifactId>T-SNE-Java</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.github.lbehnke</groupId>
+			<artifactId>hierarchical-clustering-java</artifactId>
+
+		</dependency>
 
 	</dependencies>
 
@@ -175,6 +180,11 @@
 				<artifactId>T-SNE-Java</artifactId>
 				<version>2.5.0</version>
 			</dependency>
+			<dependency>
+				<groupId>com.github.lbehnke</groupId>
+				<artifactId>hierarchical-clustering-java</artifactId>
+				<version>1.2.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -186,7 +196,7 @@
 				<!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
 				<version>2.22.0</version>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
