--- a/pom.xml
+++ b/pom.xml
@@ -95,9 +95,11 @@
 		<dependency>
 			<groupId>com.github.lbehnke</groupId>
 			<artifactId>hierarchical-clustering-java</artifactId>
-
 		</dependency>
-
+		<dependency>
+			<groupId>com.github.haifengl</groupId>
+			<artifactId>smile-core</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -185,6 +187,11 @@
 				<artifactId>hierarchical-clustering-java</artifactId>
 				<version>1.2.0</version>
 			</dependency>
+			<dependency>
+				<groupId>com.github.haifengl</groupId>
+				<artifactId>smile-core</artifactId>
+				<version>2.4.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -212,7 +219,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.2</version>
+				<version>3.3</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
