--- a/autoUpdateConfig.json
+++ b/autoUpdateConfig.json
@@ -1,5 +1,8 @@
 {
   "checkUrl": "https://api.github.com/repos/yjx0003/ubumonitor/releases/latest",
   "pattern": "^UBUMonitor.+.jar$",
-  "vmArgs": "-Xmx1g -XX:NewRatio=8" 
+  "vmArgs": [
+        "-Xmx1G",
+        "-XX:NewRatio=8"
+    ]
 }
