--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>es.ubu.lsi</groupId>
 	<artifactId>ubumonitor</artifactId>
-	<version>2.6.5-dev</version>
+	<version>2.6.5-stable</version>
 
 
 	<name>UBUMonitor</name>
