--- a/pom.xml
+++ b/pom.xml
@@ -70,12 +70,10 @@
 			<groupId>org.controlsfx</groupId>
 			<artifactId>controlsfx</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.threeten</groupId>
 			<artifactId>threeten-extra</artifactId>
@@ -99,6 +97,15 @@
 		<dependency>
 			<groupId>com.github.haifengl</groupId>
 			<artifactId>smile-plot</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-analyzers-common</artifactId>
+
 		</dependency>
 	</dependencies>
 
@@ -139,8 +146,6 @@
 				<artifactId>opencsv</artifactId>
 				<version>4.6</version>
 			</dependency>
-
-
 			<dependency>
 				<groupId>org.threeten</groupId>
 				<artifactId>threeten-extra</artifactId>
@@ -192,7 +197,24 @@
 				<artifactId>smile-plot</artifactId>
 				<version>2.4.0</version>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.lucene</groupId>
+				<artifactId>lucene-core</artifactId>
+				<version>8.6.2</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.lucene</groupId>
+				<artifactId>lucene-analyzers-common</artifactId>
+				<version>8.6.2</version>
+
+			</dependency>
+			<dependency>
+				<groupId>org.apache.lucene</groupId>
+				<artifactId>lucene-queryparser</artifactId>
+				<version>8.6.2</version>
+			</dependency>
 		</dependencies>
+
 	</dependencyManagement>
 
 	<build>
