#94 modificado libreria de nube de palabras por kumo

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -27,7 +27,8 @@ log4j.appender.FICHERO.layout.ConversionPattern=%d{MM-dd@HH:mm:ss} %-5p (%13F:%L
 # disable this package from log (hide login and password)
 log4j.logger.org.apache.http=OFF
 log4j.logger.org.apache.http.impl.conn=OFF
-
+log4j.logger.smile=OFF
+log4j.logger.com.kennycason.kumo=OFF
 #log4j.logger.org.apache.http.impl.conn.DefaultHttpClientConnectionOperator=OFF
 #log4j.logger.org.apache.http.impl.conn.LoggingManagedHttpClientConnection=OFF
 #log4j.logger.org.apache.http.impl.conn.Wire=OFF
