--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,12 @@
 			<artifactId>commonmark</artifactId>
 			<version>0.15.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.kennycason</groupId>
+			<artifactId>kumo-core</artifactId>
+			<version>1.27</version>
+		</dependency>
+		
 	</dependencies>
 
 
