Modificado las barras de matriculaciones

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,7 +1,7 @@
 # ALL < DEBUG < INFO < WARN < ERROR < FATAL < OFF
 
 #log4j.rootLogger=ALL, FICHERO
-log4j.rootLogger=ALL, stdout, FICHERO
+log4j.rootLogger=ALL, stdout
 #log4j.rootLogger=WARN, FICHERO
 
 # Log in console
@@ -14,6 +14,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{MM-dd@HH:mm:ss} %-5p (%13F:%L)
 # Log in file
 log4j.appender.FICHERO=org.apache.log4j.RollingFileAppender
 log4j.appender.FICHERO.File=${logfile.name}
+log4j.appender.FICHERO.encoding=UTF-8
 # Set the append to false, should not overwrite
 log4j.appender.FICHERO.Append=true
 # max.size per file before change
@@ -29,6 +30,7 @@ log4j.logger.org.apache.http=OFF
 log4j.logger.org.apache.http.impl.conn=OFF
 log4j.logger.smile=OFF
 log4j.logger.com.kennycason.kumo=OFF
+
 #log4j.logger.org.apache.http.impl.conn.DefaultHttpClientConnectionOperator=OFF
 #log4j.logger.org.apache.http.impl.conn.LoggingManagedHttpClientConnection=OFF
 #log4j.logger.org.apache.http.impl.conn.Wire=OFF
