--- a/src/main/resources/log4j-dev.properties
+++ b/src/main/resources/log4j-dev.properties
@@ -15,6 +15,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{MM-dd@HH:mm:ss} %-5p (%13F:%L)
 log4j.appender.FICHERO=org.apache.log4j.RollingFileAppender
 log4j.appender.FICHERO.File=${logfile.name}
 log4j.appender.FICHERO.encoding=UTF-8
+log4j.appender.FICHERO.Threshold=WARN
 # Set the append to false, should not overwrite
 log4j.appender.FICHERO.Append=true
 # max.size per file before change
