--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>es.ubu.lsi</groupId>
 	<artifactId>ubumonitor</artifactId>
-	<version>2.10.0</version>
+	<version>2.10.0-alpha</version>
 
 
 
